--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -286,7 +286,30 @@
     "editMatch": "Edit Match",
     "updateScore": "Update Score",
     "teamWinner": "{{team}} Wins",
-    "matchComplete": "Match Complete"
+    "matchComplete": "Match Complete",
+    "members": "Members",
+    "generate": "Generate Tournament",
+    "title": "Title",
+    "round": "Round {{round}}",
+    "match": "Match",
+    "team": "Team",
+    "score": "Score",
+    "winner": "Winner",
+    "loser": "Loser",
+    "draw": "Draw",
+    "noWinner": "No Winner",
+    "noLoser": "No Loser",
+    "noDraw": "No Draw",
+    "noMatches": "No matches",
+    "noTeams": "No teams",
+    "noScores": "No scores",
+    "noRounds": "No rounds",
+    "noBracket": "No tournament",
+    "noRoundRobin": "No round-robin",
+    "noCustom": "No custom format",
+    "noParticipants": "No participants",
+    "noParticipantsInSport": "No participants in this sport",
+    "manageTeams": "Manage Teams"
   },
   "teamManagement": {
     "title": "Team Management",
