--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -52,6 +52,31 @@
     "noMembers": "Aucun membre",
     "notFound": "Sport non trouvé"
   },
+  "tournament": {
+    "members": "Membres",
+    "generate": "Générer le tournoi",
+    "title": "Titre",
+    "round": "Tour {{round}}",
+    "match": "Match",
+    "team": "Équipe",
+    "score": "Score",
+    "winner": "Vainqueur",
+    "loser": "Perdant",
+    "draw": "Match nul",
+    "noWinner": "Pas de vainqueur",
+    "noLoser": "Pas de perdant",
+    "noDraw": "Pas de match nul",
+    "noMatches": "Aucun match",
+    "noTeams": "Aucune équipe",
+    "noScores": "Aucun score",
+    "noRounds": "Aucun tour",
+    "noBracket": "Aucun tournoi",
+    "noRoundRobin": "Aucun tournoi toutes rondes",
+    "noCustom": "Aucun format personnalisé",
+    "noParticipants": "Aucun participant",
+    "noParticipantsInSport": "Aucun participant dans ce sport",
+    "manageTeams": "Gérer les équipes"
+  },
   "admin": {
     "title": "Panneau d'administration",
     "events": "Gestion des événements",
