scoring board 追加したかった

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -91,6 +91,15 @@
   },
   "admin": {
     "title": "管理パネル",
+    "scoringBoard": "スコアリングボード",
+    "noSportsInActiveEvent": "アクティブなイベントに競技がありません",
+    "pleaseAddSports": "最初にいくつかの競技を追加してください",
+    "goToEventManagement": "イベント管理へ移動",
+    "goToDashboard": "ダッシュボードへ移動",
+    "howToUse": "使い方",
+    "scoringBoardDescription": "各タブをクリックして、異なる競技のスコアを管理できます。変更はリアルタイムで保存されます。",
+    "autoSaveEnabled": "自動保存機能が有効です。変更はすぐに保存されます。",
+    "pleaseSetActiveEvent": "まずダッシュボードからアクティブなイベントを設定してください",
     "events": "イベント管理",
     "dashboard": "ダッシュボード",
     "users": "ユーザー管理",
