--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -614,5 +614,38 @@
     "notesPlaceholder": "メモを入力",
     "rankingSettings": "ランキング設定",
     "criteriaNameHelp": "ランキングの基準となる項目名"
+  },
+  "schedule": {
+    "title": "スケジュール",
+    "timeline": "タイムライン",
+    "timeRange": "開催時間",
+    "events": "イベント",
+    "basicSettings": "基本設定",
+    "breakSettings": "休憩設定",
+    "startTime": "開始時間",
+    "endTime": "終了時間",
+    "matchDuration": "1試合の所要時間 (分)",
+    "breakDuration": "試合間の休憩時間 (分)",
+    "groupStageDuration": "グループステージの試合時間 (分)",
+    "playoffDuration": "プレーオフの試合時間 (分)",
+    "breakBetweenStages": "ステージ間の休憩時間 (分)",
+    "includeLunchBreak": "昼休みを含める",
+    "lunchStartTime": "昼休み開始時間",
+    "lunchEndTime": "昼休み終了時間",
+    "additionalBreaks": "追加の休憩",
+    "breakStartTime": "休憩開始時間",
+    "breakEndTime": "休憩終了時間",
+    "breakTitle": "休憩タイトル",
+    "noBreaks": "追加の休憩はありません",
+    "generateSchedule": "スケジュール生成",
+    "noScheduleGenerated": "スケジュールはまだ生成されていません",
+    "noScheduleAvailable": "このスポーツにはスケジュールがありません",
+    "scheduleHelp": "スケジュールを生成してイベントの日程を管理します",
+    "scheduleSettings": "スケジュール設定",
+    "scheduleSettingsHelp": "イベントのスケジュール設定を行います",
+    "scheduleGeneration": "スケジュール生成",
+    "scheduleGenerationHelp": "スケジュールを生成してイベントの日程を管理します",
+    "scheduleGenerationError": "スケジュール生成エラー",
+    "scheduleGenerationErrorHelp": "スケジュール生成中にエラーが発生しました"
   }
 }
