試合データ構築ロジックを整理し、不要なコードを削除しました。また、リーグプレイオフの試合ID生成ロジックを修正し、ローカライズファイルにブロック削除確認メッセージを追加しました。

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -619,6 +619,7 @@
     "courtNumber": "コート番号"
   },
   "league": {
+    "confirmRemoveBlocks": "{{count}}個のブロック({{target}})を削除しますか？合計{{total}}です。",
     "confirmResetScores": "スコアをリセットしますか？",
     "confirmResetPlayoff": "プレーオフをリセットしますか？",
     "settings": "リーグ設定",
