--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -91,7 +91,9 @@
     "customRulePlaceholder": "例: 参加人数に応じてボーナスポイントあり",
     "customRuleHelp": "特別なポイントルールがある場合に記入してください",
     "recalculatePrompt": "設定を更新しました。「成績を計算する」をクリックして再計算してください",
-    "updatePointsError": "ポイント設定の更新に失敗しました"
+    "updatePointsError": "ポイント設定の更新に失敗しました",
+    "settingsSaved": "総合成績ボード設定を保存しました",
+    "settingsError": "設定の保存中にエラーが発生しました"
   },
   "event": {
     "tabs": {
