クラススケジュール表示の文言を変更し、ホームページのレスポンシブデザインを改善しました。また、管理設定ページから自動保存機能に関するコードを削除しました。

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -942,7 +942,7 @@
     "noActiveEvent": "現在アクティブな行事がありません",
     "accessDescription": "クラスのスケジュールに簡単にアクセス",
     "quickAccess": "クイックアクセス",
-    "viewClassSchedule": "クラススケジュールを表示",
+    "viewClassSchedule": "クラスごとのスケジュールを表示",
     "viewSchedule": "スケジュールを表示"
   },
   "Overall Winners": "総合優勝者"
