言語セレクタに簡体字中国語を追加し、フランス語とドイツ語の翻訳ファイルに新しいキーを追加しました。また、英語のJSONファイルのパスをフランス語版に変更しました。

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -32,7 +32,30 @@
     "location": "Ort",
     "description": "Beschreibung",
     "organizers": "Organisatoren",
-    "noOrganizers": "Keine Organisatoren zugewiesen"
+    "noOrganizers": "Keine Organisatoren zugewiesen",
+    "backToSportsManagement": "Zurück zur Sportverwaltung",
+    "classCount": "Klassen: {{count}}",
+    "classTemplateDescription": "Klassenvorlagenbeschreibung.",
+    "classTemplateError": "Klassenvorlage konnte nicht erstellt werden.",
+    "classTemplateGenerated": "Klassenvorlage erstellt.",
+    "classTemplateWarning": "Warnung zur Klassenvorlage.",
+    "dangerZone": "Gefahrenzone",
+    "dataValidationError": "Datenvalidierungsfehler.",
+    "deleteEvent": "Ereignis löschen",
+    "deleteEventWarning": "Sind Sie sicher, dass Sie dieses Ereignis löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "edit": "Bearbeiten",
+    "generateClassTemplate": "Klassenvorlage generieren",
+    "gradeParticipation": "Teilnahme nach Klassenstufe",
+    "manageClasses": "Klassen verwalten",
+    "name": "Ereignisname",
+    "noClassesYet": "Noch keine Klassen.",
+    "notFound": "Ereignis nicht gefunden.",
+    "setAsActive": "Als aktiv festlegen",
+    "tabs": {
+      "roster": "Aufstellung",
+      "scoreboard": "Punktetafel",
+      "settings": "Einstellungen"
+    }
   },
   "sports": {
     "tournament": "Turnier",
@@ -87,5 +110,67 @@
     "noParticipants": "Keine Teilnehmer",
     "noParticipantsInSport": "Keine Teilnehmer in dieser Sportart",
     "manageTeams": "Teams verwalten"
-  }
+  },
+  "Overall Winners": "Gesamtsieger",
+  "classSchedule": {
+    "accessDescription": "Zugriffsbeschreibung",
+    "allGrades": "Alle Klassenstufen",
+    "certainty": "Sicherheit",
+    "classSelectionHint": "Wählen Sie Klassen aus, um den Stundenplan anzuzeigen.",
+    "clearAll": "Alles löschen",
+    "confirmedMatch": "Bestätigtes Spiel",
+    "grade": "Klasse",
+    "noActiveEvent": "Kein aktives Ereignis",
+    "noClassesInGrade": "Keine Klassen in dieser Stufe.",
+    "noMatchingSchedule": "Kein passender Zeitplan.",
+    "noSchedule": "Kein Zeitplan verfügbar.",
+    "notes": "Notizen",
+    "potentialMatch": "Mögliches Spiel",
+    "potentialMatchExplanation": "Dieses Spiel ist ein mögliches Spiel.",
+    "quickAccess": "Schnellzugriff",
+    "scheduleMayChange": "Zeitplan kann sich ändern.",
+    "selectAll": "Alle auswählen",
+    "selectClasses": "Klassen auswählen",
+    "selectClassesHint": "Tipp: Wählen Sie Klassen zum Anzeigen.",
+    "selectClassesToView": "Wählen Sie Klassen, um den Zeitplan anzuzeigen.",
+    "selectedClasses": "Ausgewählte Klassen",
+    "shareTitle": "Klassenszeitplan teilen",
+    "title": "Klassenszeitplan",
+    "trySelectingDifferentClasses": "Versuchen Sie, andere Klassen auszuwählen.",
+    "undefinedDate": "Unbestimmtes Datum",
+    "viewClassSchedule": "Klassenszeitplan anzeigen",
+    "viewSchedule": "Zeitplan anzeigen"
+  },
+  "classes": "Klassen",
+  "clear-all": "Alles löschen",
+  "custom": {
+    "noData": "Keine Daten verfügbar."
+  },
+  "export": {
+    "allEvents": "Alle Ereignisse",
+    "contentOptions": "Inhaltsoptionen",
+    "customFileName": "Benutzerdefinierter Dateiname",
+    "errorMessage": "Exportfehler.",
+    "exportInstructions": "Exportanweisungen.",
+    "exportOptions": "Exportoptionen",
+    "exportScope": "Exportbereich",
+    "exportToExcel": "Als Excel exportieren",
+    "exporting": "Exportiere...",
+    "fileNameHelp": "Dateinamenhilfe.",
+    "includeIndividualEvents": "Individuelle Ereignisse einbeziehen",
+    "includeOverallWinners": "Gesamtsieger einbeziehen",
+    "instructions": "Anweisungen",
+    "noDataError": "Keine Daten zum Exportieren.",
+    "noEvents": "Keine Ereignisse zum Exportieren.",
+    "noSports": "Keine Sportarten zum Exportieren.",
+    "pageTitle": "Exportseite",
+    "selectAll": "Alle auswählen",
+    "selectEvents": "Ereignisse auswählen",
+    "selectSports": "Sportarten auswählen",
+    "selectedEvents": "Ausgewählte Ereignisse",
+    "selectedSports": "Ausgewählte Sportarten",
+    "successMessage": "Export erfolgreich.",
+    "title": "Exportieren"
+  },
+  "web-vitals": "Web Vitals"
 }
