--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -32,7 +32,30 @@
     "location": "Lieu",
     "description": "Description",
     "organizers": "Organisateurs",
-    "noOrganizers": "Aucun organisateur assigné"
+    "noOrganizers": "Aucun organisateur assigné",
+    "backToSportsManagement": "Retour à la gestion des sports",
+    "classCount": "Classes : {{count}}",
+    "classTemplateDescription": "Description du modèle de classe.",
+    "classTemplateError": "Échec de la génération du modèle de classe.",
+    "classTemplateGenerated": "Modèle de classe généré.",
+    "classTemplateWarning": "Avertissement du modèle de classe.",
+    "dangerZone": "Zone de danger",
+    "dataValidationError": "Erreur de validation des données.",
+    "deleteEvent": "Supprimer l'événement",
+    "deleteEventWarning": "Êtes-vous sûr de vouloir supprimer cet événement ? Cette action est irréversible.",
+    "edit": "Modifier",
+    "generateClassTemplate": "Générer le modèle de classe",
+    "gradeParticipation": "Participation par niveau",
+    "manageClasses": "Gérer les classes",
+    "name": "Nom de l'événement",
+    "noClassesYet": "Aucune classe pour le moment.",
+    "notFound": "Événement non trouvé.",
+    "setAsActive": "Définir comme actif",
+    "tabs": {
+      "roster": "Liste des joueurs",
+      "scoreboard": "Tableau des scores",
+      "settings": "Paramètres"
+    }
   },
   "sports": {
     "tournament": "Tournoi",
@@ -48,9 +71,49 @@
     "manual": "Manuel",
     "noTeams": "Aucune équipe enregistrée",
     "teamCount": "{{count}} équipes",
-    "memberCount": "{{count}} membres",
     "noMembers": "Aucun membre",
-    "notFound": "Sport non trouvé"
+    "notFound": "Sport non trouvé",
+    "addMember": "Ajouter un membre",
+    "coverImage": "Image de couverture",
+    "create": "Créer un sport",
+    "dangerZone": "Zone de danger",
+    "deleteConfirmTitle": "Supprimer le sport",
+    "deleteSport": "Supprimer le sport",
+    "deleteSportButton": "Supprimer le sport",
+    "deleteSportWarning": "Êtes-vous sûr de vouloir supprimer ce sport ? Cette action est irréversible.",
+    "fieldUpdateError": "Échec de la mise à jour du champ.",
+    "fieldUpdateSuccess": "Champ mis à jour avec succès.",
+    "lastSync": "Dernière synchronisation",
+    "league": "Ligue",
+    "leagueDescription": "Description du format de ligue.",
+    "loading": "Chargement...",
+    "manageScores": "Gérer les scores",
+    "manualContent": "Contenu du manuel.",
+    "manualPlaceholder": "Saisir le manuel...",
+    "memberCount": "Membres : {{count}}",
+    "preview": "Aperçu",
+    "ranking": "Classement",
+    "rankingDescription": "Description du classement.",
+    "remoteChangesDetected": "Modifications distantes détectées.",
+    "remoteValue": "Valeur distante.",
+    "roleTeacher": "Enseignant",
+    "rulesContent": "Contenu des règles.",
+    "rulesPlaceholder": "Saisir les règles...",
+    "scoreManagement": "Gestion des scores",
+    "syncError": "Erreur de synchronisation.",
+    "syncSuccess": "Synchronisation réussie.",
+    "tabs": {
+      "home": "Accueil",
+      "manual": "Manuel",
+      "matches": "Matches",
+      "roster": "Liste des joueurs",
+      "rules": "Règles",
+      "schedule": "Programme",
+      "settings": "Paramètres"
+    },
+    "teamMembers": "Membres de l'équipe",
+    "unknownEvent": "Événement inconnu",
+    "useRemoteValue": "Utiliser la valeur distante"
   },
   "tournament": {
     "members": "Membres",
@@ -75,7 +138,14 @@
     "noCustom": "Aucun format personnalisé",
     "noParticipants": "Aucun participant",
     "noParticipantsInSport": "Aucun participant dans ce sport",
-    "manageTeams": "Gérer les équipes"
+    "manageTeams": "Gérer les équipes",
+    "builder": "Créateur de tournoi",
+    "errorGenerating": "Erreur lors de la génération du tournoi.",
+    "hasRepechage": "Avec repêchage",
+    "mainBracket": "Tableau principal",
+    "needAtLeastTwoTeams": "Au moins deux équipes nécessaires.",
+    "noRoster": "Aucune liste.",
+    "teamsSelected": "Équipes sélectionnées : {{count}}"
   },
   "admin": {
     "title": "Panneau d'administration",
@@ -87,5 +157,67 @@
     "editEvent": "Modifier l'événement",
     "editSport": "Modifier le sport",
     "help": "Aide"
-  }
+  },
+  "Overall Winners": "Gagnants généraux",
+  "classSchedule": {
+    "accessDescription": "Description d'accès",
+    "allGrades": "Tous les niveaux",
+    "certainty": "Certitude",
+    "classSelectionHint": "Sélectionnez des classes pour voir l'emploi du temps.",
+    "clearAll": "Tout effacer",
+    "confirmedMatch": "Match confirmé",
+    "grade": "Niveau",
+    "noActiveEvent": "Aucun événement actif",
+    "noClassesInGrade": "Aucune classe dans ce niveau.",
+    "noMatchingSchedule": "Aucun emploi du temps correspondant.",
+    "noSchedule": "Aucun emploi du temps disponible.",
+    "notes": "Notes",
+    "potentialMatch": "Match potentiel",
+    "potentialMatchExplanation": "Ce match est un match potentiel.",
+    "quickAccess": "Accès rapide",
+    "scheduleMayChange": "L'emploi du temps peut changer.",
+    "selectAll": "Tout sélectionner",
+    "selectClasses": "Sélectionner des classes",
+    "selectClassesHint": "Astuce : sélectionnez des classes à afficher.",
+    "selectClassesToView": "Sélectionnez des classes pour voir l'emploi du temps.",
+    "selectedClasses": "Classes sélectionnées",
+    "shareTitle": "Partager l'emploi du temps de la classe",
+    "title": "Emploi du temps de la classe",
+    "trySelectingDifferentClasses": "Essayez de sélectionner d'autres classes.",
+    "undefinedDate": "Date indéfinie",
+    "viewClassSchedule": "Voir l'emploi du temps de la classe",
+    "viewSchedule": "Voir l'emploi du temps"
+  },
+  "classes": "Classes",
+  "clear-all": "Tout effacer",
+  "custom": {
+    "noData": "Aucune donnée disponible."
+  },
+  "export": {
+    "allEvents": "Tous les événements",
+    "contentOptions": "Options de contenu",
+    "customFileName": "Nom de fichier personnalisé",
+    "errorMessage": "Erreur d'exportation.",
+    "exportInstructions": "Instructions d'exportation.",
+    "exportOptions": "Options d'exportation",
+    "exportScope": "Portée de l'exportation",
+    "exportToExcel": "Exporter vers Excel",
+    "exporting": "Exportation...",
+    "fileNameHelp": "Aide pour le nom de fichier.",
+    "includeIndividualEvents": "Inclure les événements individuels",
+    "includeOverallWinners": "Inclure les gagnants généraux",
+    "instructions": "Instructions",
+    "noDataError": "Aucune donnée à exporter.",
+    "noEvents": "Aucun événement à exporter.",
+    "noSports": "Aucun sport à exporter.",
+    "pageTitle": "Page d'exportation",
+    "selectAll": "Tout sélectionner",
+    "selectEvents": "Sélectionner des événements",
+    "selectSports": "Sélectionner des sports",
+    "selectedEvents": "Événements sélectionnés",
+    "selectedSports": "Sports sélectionnés",
+    "successMessage": "Exportation réussie.",
+    "title": "Exporter"
+  },
+  "web-vitals": "Web Vitals"
 }
