トーナメントスコアリングで同点を許可しないロジックを追加し、関連するエラーメッセージを日本語の翻訳ファイルに追加しました。また、データ更新時にundefinedをnullに変換する機能を追加しました。複数のスコアリングコンポーネントで勝者判定のロジックを修正しました。不要なAPIファイルを削除しました。

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -309,6 +309,8 @@
     "noMatches": "マッチがありません",
     "noTeams": "チームがありません",
     "noScores": "スコアがありません",
+    "tieNotAllowed": "トーナメントでは同点は許可されません。勝者を決定してください。",
+    "noMatchesInRound": "このラウンドには試合がありません",
     "noRounds": "ラウンドがありません",
     "noBracket": "トーナメントがありません",
     "noRoundRobin": "総当たり戦がありません",
