Add error handling and overall scoreboard management features
- Introduced error messages for various export scenarios in English and Japanese localization files.
- Created a custom ExportError class to handle specific export-related errors.
- Implemented validation for file names and checks for data presence before export.
- Enhanced the ExportManager to include detailed error handling during the export process.
- Added OverallScoreTab component to manage overall scoreboard settings, including team types and point distributions.
- Implemented functionality to calculate overall scores based on sports results and display them in a structured format.
- Added UI elements for managing custom teams and displaying calculated scores with appropriate rankings.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -231,6 +231,19 @@
     "contentOptions": "Content Options",
     "customFileName": "Custom File Name",
     "errorMessage": "Export error.",
+    "errors": {
+      "noData": "No data found for export. Please create events or sports and try again.",
+      "noEventsSelected": "No events selected for export. Please select at least one event.",
+      "noSportsSelected": "No sports selected for export. Please select at least one sport.",
+      "invalidFileName": "Invalid file name. Only alphanumeric characters, hyphens, and underscores are allowed.",
+      "workbookCreationFailed": "Failed to create Excel file. Please try again after a moment.",
+      "dataProcessingFailed": "Error occurred while processing data. Please check data integrity.",
+      "fileGenerationFailed": "Failed to generate file. This may be due to insufficient browser memory.",
+      "downloadFailed": "Download failed. Please check your browser settings.",
+      "networkError": "Network error occurred. Please check your internet connection.",
+      "permissionDenied": "Permission denied to save file. Please check your browser settings.",
+      "unknown": "An unexpected error occurred. Please reload the page and try again."
+    },
     "exportInstructions": "Export instructions.",
     "exportOptions": "Export Options",
     "exportScope": "Export Scope",
