--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -847,6 +847,19 @@
     "contentOptions": "コンテンツオプション",
     "customFileName": "カスタムファイル名",
     "errorMessage": "エクスポートエラー",
+    "errors": {
+      "noData": "エクスポートするデータが見つかりません。イベントまたは競技を作成してから再度お試しください。",
+      "noEventsSelected": "エクスポートするイベントが選択されていません。少なくとも1つのイベントを選択してください。",
+      "noSportsSelected": "エクスポートする競技が選択されていません。少なくとも1つの競技を選択してください。",
+      "invalidFileName": "ファイル名が無効です。英数字、ハイフン、アンダースコアのみ使用可能です。",
+      "workbookCreationFailed": "Excelファイルの作成に失敗しました。しばらく時間をおいて再度お試しください。",
+      "dataProcessingFailed": "データの処理中にエラーが発生しました。データの整合性を確認してください。",
+      "fileGenerationFailed": "ファイルの生成に失敗しました。ブラウザの容量不足の可能性があります。",
+      "downloadFailed": "ダウンロードに失敗しました。ブラウザの設定を確認してください。",
+      "networkError": "ネットワークエラーが発生しました。インターネット接続を確認してください。",
+      "permissionDenied": "ファイルの保存権限がありません。ブラウザの設定を確認してください。",
+      "unknown": "予期しないエラーが発生しました。ページを再読み込みして再度お試しください。"
+    },
     "exportInstructions": "エクスポート手順",
     "exportOptions": "エクスポートオプション",
     "exportScope": "エクスポート範囲",
